fix navbar z-index over play-btn

--- a/src/index.scss
+++ b/src/index.scss
@@ -1160,7 +1160,7 @@ $nav-slide-speed: 0.3s;
 	position: fixed;
 	top: 0px;
 	left: 0px;
-	z-index: 200;
+	z-index: 1000;
 	
 	transition: opacity 2.5s ease-in, transform 1.1s ease-in;
 }
